Track1Data migrated to ArrayList instead of LinkedList, it allowed to make getPositions much more effective